update backend to have more admin endpoints
